Only mobile responsive left(Marko's part)

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -17,9 +17,9 @@
                     <li>
                         <span class="yellowCircle"><i class="fa fa-envelope" aria-hidden="true"></i></span>
                         Email: info@info.com </li>
-                    <li><span class="greenCircle"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                    <li id="phoneHeader"><span class="greenCircle"><i class="fa fa-phone" aria-hidden="true"></i></span>
                         Phone: +000 123123 </li>
-                    <li><span class="redCircle"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
+                    <li id="timeHeader"><span class="redCircle"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
                         Open: 9am-6pm </li>
                 </ul>
             </div>
@@ -46,11 +46,29 @@
                     <li><span class="purpleCircleNb"><i class="fa fa-calendar nav-icon" aria-hidden="true"></i></span>
                         <p>Blog</p>
                          </li>
-                    <li><span class="greenCircleNb"><i class="fa fa-file-text-o nav-icon" aria-hidden="true"></i></span>
+                    <li id="nbCourses"><span class="greenCircleNb"><i class="fa fa-file-text-o nav-icon" aria-hidden="true"></i></span>
                         <p>Courses</p>
                         </li>         
                 </ul>
             </div>
+            <!-- NB FOR PHONE-->
+            <img src="../img/hamburger.png" alt="" id="hamburgerNb">
+            <div class="nbPhone">
+                <ul>
+                    <li>
+                        <span class="yellowCircleNb"><i class="fa fa-home nav-icon" aria-hidden="true"></i></span>
+                        <p>Home</p> </li>
+                    <li><span class="greenCircleNb"><i class="fa fa-shopping-basket text-white" aria-hidden="true"></i></span>
+                        <p>Store</p> </li>
+                    <li><span class="purpleCircleNb"><i class="fa fa-calendar nav-icon" aria-hidden="true"></i></span>
+                        <p>Blog</p>
+                         </li>
+                    <li id="nbCourses"><span class="greenCircleNb"><i class="fa fa-file-text-o nav-icon" aria-hidden="true"></i></span>
+                        <p>Courses</p>
+                        </li>         
+                </ul>
+            </div>
+            <!-- NB FOR PHONE END-->
         </div>
     </div>
 
@@ -74,46 +92,38 @@
             <div class="features">
                 <div class="iconFeature"><i class="fa fa-graduation-cap" aria-hidden="true" id="yellowIcon"></i></div>
                 <div class="textFeature">
-                    <h1>Experience</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia sunt, reiciendis eaque suscipit quos molestias non culpa nemo accusantium ipsa? Incidunt?</span>
+                    <h2>Experience</h2>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia </span>
                 </div>
             </div>
             <div class="features"><div class="features">
-                <div class="iconFeature"><i class="fa fa-graduation-cap" aria-hidden="true"id="greenIcon"></i></div>
-                <div class="textFeature"><h1>Experience123123</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia sunt, reiciendis eaque suscipit quos molestias non culpa nemo accusantium ipsa? Incidunt?</span>
-                </div>
+                <div class="iconFeature"><i class="fa fa-leaf" aria-hidden="true" id="greenIcon"></i></div>
+                <div class="textFeature"><h2>Physical Activity</h2>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia </span> </div>
             </div></div>
             <div class="features"><div class="features">
-                <div class="iconFeature"><i class="fa fa-graduation-cap" aria-hidden="true"id="pinkIcon"></i></div>
-                <div class="textFeature"><h1>Experience12312312</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia sunt, reiciendis eaque suscipit quos molestias non culpa nemo accusantium ipsa? Incidunt?</span>
-                </div>
+                <div class="iconFeature"><i class="fa fa-car" aria-hidden="true" id="redIcon"></i></div>
+                <div class="textFeature"><h2>Transportation</h2>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia </span></div>
             </div>
         </div>
+        <div class="features">
+            <div class="iconFeature"><i class="fa fa-cutlery" aria-hidden="true" id="blueIcon"></i></div>
+            <div class="textFeature">
+                <h2>Delicious Food</h2>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia </span> </div>
         </div>
-        <div class="rowFeatures">
-            <div class="features">
-                <div class="iconFeature"><i class="fa fa-graduation-cap" aria-hidden="true" id="yellowIcon"></i></div>
-                <div class="textFeature">
-                    <h1>Experience</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia sunt, reiciendis eaque suscipit quos molestias non culpa nemo accusantium ipsa? Incidunt?</span>
-                </div>
-            </div>
-            <div class="features"><div class="features">
-                <div class="iconFeature"><i class="fa fa-graduation-cap" aria-hidden="true"id="greenIcon"></i></div>
-                <div class="textFeature"><h1>Experience</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia sunt, reiciendis eaque suscipit quos molestias non culpa nemo accusantium ipsa? Incidunt?</span>
-                </div>
-            </div></div>
-            <div class="features"><div class="features">
-                <div class="iconFeature"><i class="fa fa-graduation-cap" aria-hidden="true"id="pinkIcon"></i></div>
-                <div class="textFeature"><h1>Experience</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia sunt, reiciendis eaque suscipit quos molestias non culpa nemo accusantium ipsa? Incidunt?</span>
-                </div>
-            </div>
+        <div class="features"><div class="features">
+            <div class="iconFeature"><i class="fa fa-heart" aria-hidden="true" id="purpleIcon"></i></div>
+            <div class="textFeature"><h2>Love & Care</h2>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia </span>  </div>
+        </div></div>
+        <div class="features"><div class="features">
+            <div class="iconFeature"><i class="fa fa-shield" aria-hidden="true" id="pinkIcon"></i></div>
+            <div class="textFeature"><h2>Annual Sports</h2>
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia </span> </div>
         </div>
-        
+        </div>
     <!--Our Features END --> 
     
 </body>
