--- a/public/src/index.html
+++ b/public/src/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -31,46 +35,46 @@
                         Cart </li>
             </div>
         </div>
-        <div class="row2">
-            <div class="headerLogo">
-                <img src="../img/logo.png" alt="">
-            </div>
-            <div class="nb">
-                <ul>
-                    <li>
-                        <span class="yellowCircleNb"><i class="fa fa-home nav-icon" aria-hidden="true"></i></span>
-                        <p>Home</p> </li>
-                    <li><span class="greenCircleNb"><i class="fa fa-shopping-basket text-white" aria-hidden="true"></i></span>
-                        <p>Store</p> </li>
-                    <li><span class="purpleCircleNb"><i class="fa fa-calendar nav-icon" aria-hidden="true"></i></span>
-                        <p>Blog</p>
-                         </li>
-                    <li id="nbCourses"><span class="greenCircleNb"><i class="fa fa-file-text-o nav-icon" aria-hidden="true"></i></span>
-                        <p>Courses</p>
-                        </li>         
-                </ul>
-            </div>
-            <!-- NB FOR PHONE-->
-            <img src="../img/hamburger.png" alt="" id="hamburgerNb">
-            <div class="nbPhone">
-                <ul>
-                    <li>
-                        <span class="yellowCircleNb"><i class="fa fa-home nav-icon" aria-hidden="true"></i></span>
-                        <p>Home</p> </li>
-                    <li><span class="greenCircleNb"><i class="fa fa-shopping-basket text-white" aria-hidden="true"></i></span>
-                        <p>Store</p> </li>
-                    <li><span class="purpleCircleNb"><i class="fa fa-calendar nav-icon" aria-hidden="true"></i></span>
-                        <p>Blog</p>
-                         </li>
-                    <li id="nbCourses"><span class="greenCircleNb"><i class="fa fa-file-text-o nav-icon" aria-hidden="true"></i></span>
-                        <p>Courses</p>
-                        </li>         
-                </ul>
-            </div>
-            <!-- NB FOR PHONE END-->
+        <nav class="navbar navbar-expand-md bg-white navbar-dark">
+            <a class="navbar-brand" id="navbar-brand" href="#"> 
+                <div class="headerLogo">
+                    <img src="../img/logo.png" alt="">
+                </div>
+            </a>
+            <button class="navbar-toggler" id="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+              <span class="navbar-toggler-icon" id="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+              <ul class="navbar-nav" id="navbar-nav">
+                <li class="nav-item">
+                    <div class="center-text">
+                        <a class="nav-link" href="#"><span class="yellowCircleNb"><i class="fa fa-home nav-icon" aria-hidden="true"></i></span>
+                        <p class="text-navbar">Home</p> </i></a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <div class="center-text">
+                  <a class="nav-link" href="#"><span class="greenCircleNb"><i class="fa fa-shopping-basket text-white" aria-hidden="true"></i></span>
+                    <p class="text-navbar">Store</p></a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <div class="center-text">
+                        <a class="nav-link" href="#"><span class="purpleCircleNb"><i class="fa fa-calendar nav-icon" aria-hidden="true"></i></span>
+                            <p class="text-navbar">Blog</p>
+                        </a>
+                    </div>
+                </li>    
+                <li class="nav-item">
+                    <div class="center-text">
+                        <a class="nav-link" href="#"><span class="greenCircleNb"><i class="fa fa-file-text-o nav-icon" aria-hidden="true"></i></span>
+                        <p class="text-navbar">Courses</p></a>
+                    </div>
+                </li>    
+              </ul>
+            </div>  
+          </nav>    
         </div>
-    </div>
-
     <!--Header Section END-->
     <!--Slider Section-->
     <div id="slider">
