Our team,gallery and responsive navbar added

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -127,7 +127,63 @@
                 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint sequi in minus voluptatibus numquam quo illum aliquid quia </span> </div>
         </div>
         </div>
+        </div>
     <!--Our Features END --> 
+    <!--Image Gallery-->
+    <div class="container">
+        <h1 class="heading">Image Gallery</h1>
+        <div class="gallery">
+            <div class="gallery-item">
+                <img class="gallery-image" src="../img/gallery1.jpg" alt="">
+            </div>
+            <div class="gallery-item">
+                <img class="gallery-image" src="../img/gallery2.jpg" alt="">
+            </div>
+            <div class="gallery-item">
+                <img class="gallery-image" src="../img/gallery3.jpg" alt="">
+           </div>
+            <div class="gallery-item">
+                <img class="gallery-image" src="../img/gallery4.jpg" alt="">
+            </div>
+            <div class="gallery-item">
+                <img class="gallery-image" src="../img/gallery5.jpg" alt="">
+            </div>
+            <div class="gallery-item">
+                <img class="gallery-image" src="../img/gallery6.jpg" alt="">
+            </div>
+            <div class="gallery-item">
+                <img class="gallery-image" src="../img/gallery7.jpg" alt="">
+            </div>
+            <div class="gallery-item">
+                <img class="gallery-image" src="../img/gallery8.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <!--Image Gallery END-->
+    <!--Our Team-->
+
+    <section class="cf team-container">
+    <h1 class="ourTeam">Our Team</h1>
+      <div class="team-member">
+        <img class="team-photo" src="../img/team1.jpg">
+        <h3>Person's Name</h3>
+        <span>I am best member of this team</span>
+        <a class="email" href="mailto:email@something.com"><span >email</span></a>
+      </div>
+      <div class="team-member">
+        <img class="team-photo" src="../img/team2.jpg">
+        <h3>Person's Name</h3>
+        <span>I am best member of this team</span>
+         <a class="email" href="mailto:email@something.com"><span >email</span></a>
+      </div>
+      <div class="team-member">
+        <img class="team-photo" src="../img/team3.jpg">
+        <h3>Person's Name</h3>
+        <span>I am best member of this team</span>
+        <a class="email" href="mailto:email@something.com"><span >email</span></a>
+      </div> 
+   </section>
+    <!--Our Team END-->
     
 </body>
 </html>
