--- a/public/src/index.html
+++ b/public/src/index.html
@@ -168,22 +168,61 @@
         <img class="team-photo" src="../img/team1.jpg">
         <h3>Person's Name</h3>
         <span>I am best member of this team</span>
-        <a class="email" href="mailto:email@something.com"><span >email</span></a>
       </div>
       <div class="team-member">
         <img class="team-photo" src="../img/team2.jpg">
         <h3>Person's Name</h3>
         <span>I am best member of this team</span>
-         <a class="email" href="mailto:email@something.com"><span >email</span></a>
       </div>
       <div class="team-member">
         <img class="team-photo" src="../img/team3.jpg">
         <h3>Person's Name</h3>
         <span>I am best member of this team</span>
-        <a class="email" href="mailto:email@something.com"><span >email</span></a>
       </div> 
    </section>
     <!--Our Team END-->
+    <!--Footer-->     
+        <footer class="footer-distributed">
+			<div class="footer-left">
+				<h3 id="kidz">Kidz<span>School</span></h3>
+				<p class="footer-links">
+					<a href="#" class="link-1">Home</a>
+					<a href="#">Store</a>
+					<a href="#">Blog</a>
+					<a href="#">Courses</a>
+				</p>
+				<p class="footer-company-name">KidzSchool © 2020</p>
+			</div>
+			<div class="footer-center">
+				<div>
+					<i class="fa fa-map-marker"></i>
+					<p><span>444 S. Cedros Ave</span> Solana Beach, California</p>
+				</div>
+				<div>
+					<i class="fa fa-phone"></i>
+					<p>+1.555.555.5555</p>
+				</div>
+				<div>
+					<i class="fa fa-envelope"></i>
+					<p><a href="mailto:support@kidzschool.com">support@kidzschool.com</a></p>
+				</div>
+			</div>
+			<div class="footer-right">
+				<p>Contact Us</p>
+				<form action="#" method="post">
+					<input type="text" name="email" placeholder="Email">
+					<textarea name="message" placeholder="Message"></textarea>
+					<button>Send</button>
+				</form>
+				<div class="footer-icons">
+					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="#"><i class="fa fa-github"></i></a>
+				</div>
+			</div>
+		</footer>
+    <!--Footer END-->
     
 </body>
 </html>
